--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,17 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:flow_horizontalAlign="start"
+    app:flow_verticalAlign="baseline"
     tools:context=".SelectionActivity">
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="244dp"
-        android:layout_height="83dp"
-        android:layout_marginTop="88dp"
-        android:textAlignment="center"
+    <GridView
+        android:id="@+id/gridView"
+        android:layout_width="303dp"
+        android:layout_height="243dp"
+        android:layout_marginBottom="216dp"
+        android:numColumns="3"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.64"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="179dp"
+        android:layout_height="137dp"
+        android:text="@string/please_select_an_image_below"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/gridView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.484" />
 </androidx.constraintlayout.widget.ConstraintLayout>
